Moved knitr-related and options-related code out of the rtfSweave package
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@103 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/rtfSweave/ChangeLog
+++ b/pkg/rtfSweave/ChangeLog
@@ -1,3 +1,7 @@
+2020-11-29  Stephen Weigand  <Weigand.Stephen@mayo.edu>
+
+	* vignettes/rtfSweave-intro.Rnw edited for clarity
+
 2016-12-26  Stephen Weigand  <Weigand.Stephen@mayo.edu>
 
 	* R/rtf.options.R added to control options
