Updated the ChangeLog
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@118 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/rtfSweave/ChangeLog
+++ b/pkg/rtfSweave/ChangeLog
@@ -1,3 +1,6 @@
+2022-02-24  Stephen Weigand  <Weigand.Stephen@mayo.edu>
+	* Curly brackets are now escaped in code output
+	* Added a test of this
 2020-11-29  Stephen Weigand  <Weigand.Stephen@mayo.edu>
 
 	* vignettes/rtfSweave-intro.Rnw edited for clarity
