Hoping I fixed a bug in calling the compiled code. Added documentation to the status codes 'check_brackets' returns.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@140 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/rtfSweave/ChangeLog
+++ b/pkg/rtfSweave/ChangeLog
@@ -1,3 +1,7 @@
+2022-04-16  Stephen Weigand  <Weigand.Stephen@mayo.edu>
+	* The `check_brackets' R function helps with checking curly
+	brackets in an RTF file. It uses a C function which means the
+	package requires compilation.
 2022-02-24  Stephen Weigand  <Weigand.Stephen@mayo.edu>
 	* Curly brackets are now escaped in code output
 	* Added a test of this
