Added quickstart function and bumped version to 0.7.5
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@142 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/rtfSweave/ChangeLog
+++ b/pkg/rtfSweave/ChangeLog
@@ -1,3 +1,7 @@
+2022-06-21  Stephen Weigand  <Weigand.Stephen@mayo.edu>
+
+	* Version 0.7.5 includes the function `quickstart'
+
 2022-04-16  Stephen Weigand  <Weigand.Stephen@mayo.edu>
 	* The `check_brackets' R function helps with checking curly
 	brackets in an RTF file. It uses a C function which means the
